...
                  <View style={styles.divider} />
                  <Row
                    Icon={Zap}
                    label={
                      sellerSetupSubmitted
                        ? 'Application under review'
                        : 'Finish seller setup'
                    }
                    value={
                      sellerSetupSubmitted
                        ? "We'll notify you once approved"
                        : 'Complete your seller profile'
                    }
...
